Opened 13 years ago

Closed 13 years ago

#8358 closed bug (fixed)

The screensaver applet no longer works in gcc4 images / BControlLook issue

Reported by: kallisti5 Owned by: axeld
Priority: blocker Milestone: R1/alpha4
Component: Kits/Interface Kit Version: R1/Development
Keywords: BControlLook Cc: mdisreali@…
Blocked By: Blocking: #8367
Platform: All

Description

To reproduce:

Backtrace:

_GLOBAL__SUB_I_ControlLook.cpp from libbe
_GLOBAL__SUB_I_ControlLook.cpp from libbe
__do_global_ctors_aux from libbe
_init() from libbe
_ZL17init_dependenciesP7image_tb() from runtime_loader
load_program
runtime_loader

Change History (6)

comment:1 by kallisti5, 13 years ago

verified th issue only exists in gcc4. gcc2 images don't see this issue.

comment:2 by anevilyak, 13 years ago

Blocking: 8367 added

(In #8367) Duplicate of #8358. That having been said, in general Qt will break on occasion regardless, since it's built with gcc4, which we don't currently guarantee binary compatibility for.

comment:3 by Disreali, 13 years ago

Is this another unintended casualty of hrev43773? If so, why is only gcc4 affected?

comment:4 by Disreali, 13 years ago

Cc: mdisreali@… added

comment:5 by anevilyak, 13 years ago

This is something different, since the screen saver preflet gets rebuilt as part of the build, and as such wouldn't be getting hit by binary compatibility issues.

comment:6 by anevilyak, 13 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev43812.

Note: See TracTickets for help on using tickets.